--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=demo-proj-A
 # Connexion à MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/enicar_certs?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/enicar_certs2?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=userenicar
 spring.datasource.password=userenicar
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -10,5 +10,18 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
+jwt.secret=ThisIsASuperStrongSecretKeyWithAtLeast32Characters123!
+jwt.expiration=86400000
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=enicarteacherequipe@gmail.com
+
+spring.mail.password=karw xidn dmqv utdq
+# Increase maximum file size and request size for multipart uploads
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
